	  than the system versions they might be trying to avoid
	- document the exp() and log() transform2() functions
	- document the constants normally set by transform2().

0.44
	- refer the user to appropriate documents in the example in 
	  Imager.pm
	- change the list of documents in Imager.pm to move the document 
	  names out of the =item lines so we can make them into links
	- the scale() method now produces a warning when called in
	  void context.
	- font.c now only uses the defined T1Lib error codes
	- update ppport.h and remove the duplicate definitions from
	  Imager.xs.  Had to mangle ppport.h to prevent duplicate global
	  function definitions.
	- newer versions of tifflib require that all of the function
	  pointers passed to TIFFClientOpen be non-NULL, the mmap() and
	  munmap() pointers were always NULL and the sizeproc was
	  sometimes NULL.
        - there would be a link or load time error on m_init_log() if
          Imager was built with IM_NOLOG, fixed by renamed init_log()
          to m_init_log() in log.c (thanks to Takumi Yamani)
        - moved some variable definitions to the right place
        - the Win32 font driver bounding box function now returns the 
          right number of values (both thanks to Takumi Yamani)
        - the Win32 font driver now uses DEFAULT_CHARSET rather than
          ANSI_CHARSET are the lfCharSet value for the LOGFONT,
          as suggested by Takumi Yamani.
        - fontfiles/ExistenceTest.{pfb,ttf} weren't marked as
          binary in the CVS repository (caused test failures if you
          built from CVS on Win32)
        - Makefile.PL should now handle INCLUDE or LIB with spaces in them
          correctly on Win32.

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/~addi/perl/Imager/

=================================================================
