@@ -1,0 +1,4 @@
+P3
+3 1
+4095
+4095 4095 4095  2048 2048 2048  2047 2047 0
