@@ -1,0 +1,4 @@
+P3
+3 1
+63
+63 63 63 32 32 32 31 31 0
